# home3

./: .gitignore  LICENSE  README.md
core/client/tools/: openUnity.sh
core/common/commonConfig/: cAchievement.xlsx  cActivationCode.xlsx  cActivity.xlsx  cAreaInfo.xlsx  cAreaLoad.xlsx  cAttack.xlsx  cAttackGroup.xlsx  cAttackLevel.xlsx  cAttribute.xlsx  cAuction.xlsx  cAvatarPart.xlsx  cBattle.xlsx  cBigFloatRank.xlsx  cBuff.xlsx  cBuffGroup.xlsx  cBuffLevel.xlsx  cBuilding.xlsx  cBuildingLevel.xlsx  cBullet.xlsx  cBulletLevel.xlsx  cCD.xlsx  cCDGroup.xlsx  cCallWay.xlsx  cCharacter.xlsx  cChatChannel.xlsx  cCost.xlsx  cCountryCode.xlsx  cCreateItem.xlsx  cCurrency.xlsx  cEffect.xlsx  cExchange.xlsx  cExchangeGroup.xlsx  cFacade.xlsx  cFightUnit.xlsx  cFightUnitLevel.xlsx  cFlowStep.xlsx  cFont.xlsx  cFunction.xlsx  cGlobal.xlsx  cInfoCode.xlsx  (+60 more)
core/docs/doc/: 新人必读.docx
core/docs/local/: serverLocal.xml
core/docs/serverPart/: linux环境配置.txt
core/link/: deleteLink.py  link.py  makeSvnForCore.py  makeSvnForCoreForLaya.py  makeSvnForCoreWithOutClient.py
core/link/svnProps/: core_ignore.txt
core/server/project/: pom.xml.exam
core/server/projectC/commonGame/: CMakeLists.txt  ExternMethodNative.h  ToolExternMethodNative.h  commonGame.vcxproj  commonGame.vcxproj.filters
core/server/projectC/commonGame/src/app/: GameApp.cpp  GameApp.h
core/server/projectC/commonGame/src/control/: GameFactoryControl.h  SceneControl.cpp  SceneControl.h
core/server/projectC/commonGame/src/global/: GameC.cpp  GameC.h
core/server/projectC/commonGame/src/navmesh/: NavMesh.cpp  NavMesh.h  NavMeshHit.cpp  NavMeshHit.h  NavMeshPath.cpp  NavMeshPath.h
core/server/projectC/commonGame/src/scene/: Scene.cpp  Scene.h
core/server/projectC/shine/: CMakeLists.txt  include.props  shine.vcxproj  shine.vcxproj.filters
core/server/projectC/shine/src/: SInclude.h
core/server/projectC/shine/src/bytes/: BytesReadStream.cpp  BytesReadStream.h  BytesWriteStream.cpp  BytesWriteStream.h
core/server/projectC/shine/src/control/: BytesControl.cpp  BytesControl.h
core/server/projectC/shine/src/ctrl/: Ctrl.cpp  Ctrl.h
core/server/projectC/shine/src/data/: BaseData.cpp  BaseData.h
core/server/projectC/shine/src/dataEx/: ExternBuf.cpp  ExternBuf.h
core/server/projectC/shine/src/global/: ShineDefine.h  ShineGlobal.cpp  ShineGlobal.h  ShineSetting.cpp  ShineSetting.h  ShineToolGlobal.cpp  ShineToolGlobal.h  ShineToolSetup.cpp  ShineToolSetup.h
core/server/projectC/shine/src/support/: PerfTimer.cpp  SMath.cpp  SMath.h
core/server/projectC/shine/src/support/collection/: SList.h  SMap.h  SSet.h
core/server/projectC/shine/src/utils/: BytesUtils.h  FileUtils.cpp  FileUtils.h  MathUtils.cpp  MathUtils.h  ObjectUtils.h  StringUtils.cpp  StringUtils.h
core/server/projectC/shineLib/recastnavigation/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  clearCMake.sh  cmake_install.cmake  doCMake.sh
core/server/projectC/shineLib/recastnavigation/DebugUtils/: cmake_install.cmake
core/server/projectC/shineLib/recastnavigation/DebugUtils/Source/: RecastDebugDraw.cpp  RecastDump.cpp
core/server/projectC/shineLib/recastnavigation/Detour/: cmake_install.cmake
core/server/projectC/shineLib/recastnavigation/Detour/Include/: DetourNavMesh.h  DetourNavMeshBuilder.h  DetourNavMeshQuery.h
core/server/projectC/shineLib/recastnavigation/Detour/Source/: DetourNavMesh.cpp  DetourNavMeshBuilder.cpp  DetourNavMeshQuery.cpp
core/server/projectC/shineLib/recastnavigation/DetourCrowd/: cmake_install.cmake
core/server/projectC/shineLib/recastnavigation/DetourTileCache/: cmake_install.cmake
core/server/projectC/shineLib/recastnavigation/DetourTileCache/Include/: DetourTileCache.h  DetourTileCacheBuilder.h
core/server/projectC/shineLib/recastnavigation/DetourTileCache/Source/: DetourTileCache.cpp  DetourTileCacheBuilder.cpp
core/server/projectC/shineLib/recastnavigation/Recast/: cmake_install.cmake
core/server/projectC/shineLib/recastnavigation/Recast/Include/: Recast.h  RecastAlloc.h
core/server/projectC/shineLib/recastnavigation/Recast/Source/: RecastMesh.cpp  RecastRasterization.cpp
core/server/projectC/shineLib/recastnavigation/RecastDemo/: cmake_install.cmake
core/server/projectC/shineLib/recastnavigation/RecastDemo/Include/: InputGeom.h  Sample_Shine.h
core/server/projectC/shineLib/recastnavigation/RecastDemo/Source/: CrowdTool.cpp  InputGeom.cpp  NavMeshPruneTool.cpp  Sample.cpp  Sample_Shine.cpp  Sample_SoloMesh.cpp  Sample_TempObstacles.cpp  Sample_TileMesh.cpp  main.cpp
core/server/projectC/shineLib/recastnavigation/Tests/: CTestTestfile.cmake  cmake_install.cmake
core/server/projectC/shineLib/recastnavigation/lib/mac/: copyDebugLib.sh  copyReleaseLib.sh
core/server/projectC/shineLib/recastnavigation/lib/x64/Debug/: DebugUtils.lib  Detour.lib  DetourCrowd.lib  DetourTileCache.lib  Recast.lib
core/server/projectC/shineLib/recastnavigation/lib/x64/Release/: DebugUtils.lib  Detour.lib  DetourCrowd.lib  DetourTileCache.lib  Recast.lib
core/server/testProject/: pom.xml
core/server/testProjectC/: CMakeLists.txt  testProjectC.sln
core/server/testProjectC/commonTest/: CMakeLists.txt  commonTest.vcxproj  commonTest.vcxproj.filters
core/server/testProjectC/commonTest/src/: main.cpp
core/server/testProjectC/shineTest/: CMakeLists.txt  include.props  shineTest.vcxproj  shineTest.vcxproj.filters
core/server/testProjectC/shineTest/src/: TT.cpp
core/server/testProjectC/x64/Debug/: shineTest.lib
core/server/testProjectC/x64/Release/: commonGame.exp  commonTest.iobj  commonTest.ipdb  shineTest.lib
core/server/tools/: ImageScale.py  MakeBranch.py  all.py  clearAdapters.py  configExport.py  configExportAll.py  configExportForEditor.py  configExportForRelease.py  dataExport.py  dataExportAll.py  dataExportAllForRelease.py  dataExportAllForReleaseAll.py  dataExportAllForReleaseWithOutMessage.py  dataExportForIdea.py  dbExportAll.py  exportNavForEditor.py  fixCppProj.py  fixHotfixProj.py  makeJNI.py  makeSvnBranch.py  mavenBuildOld.bat  mavenClientBuild.py  mavenServerBuild.py  shine.py  (+9 more)
(+7116 files in other folders)
